added some styling

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,9 @@
-<h1>I am YOUR Mentor!</h1>
-<h2>Be the best you...</h2>
+<div class="hero">
+  <br>
+  <div class="frosty col-10 offset-1 text-center">
+    <h1>I am YOUR Mentor!</h1>
+    <h2>Be the best you...</h2>
+  </div>
+</div>
+
+
