--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,8 +1,13 @@
 <div class="hero">
   <br>
   <div class="frosty col-10 offset-1 text-center">
+    <br>
     <h1>I am YOUR Mentor!</h1>
+    <br>
     <h2>Be the best you...</h2>
+    <br>
+    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+    <br><br>
   </div>
 </div>
 
