--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -12,7 +12,7 @@
         <%= course.description %>
       </div>
       <div class="col-sm-4 col-12 text-center">
-        <%= link_to 'Button', class: 'btn btn-primary btn-large' %>
+        <%= link_to 'Button', '#', class: 'btn btn-primary btn-large' %>
       </div>
     </div>
     <br class="clr">
