--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -12,6 +12,7 @@
   <ul>
     <% current_course.sections.each do |section| %>
       <li>
+        <%= image_tag current_course.image unless current_course.image.nil? %>
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         <ul>
